welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: value ! is not a member of Boolean
while (croisement!)
                 ^